Fix alignment

--- a/assets/variant-list.css
+++ b/assets/variant-list.css
@@ -20,7 +20,6 @@ variant-list .quantity__button {
 }
 
 .variant-list__total {
-  display: flex;
   padding-top: 2rem;
   border-top: 0.1rem solid rgba(var(--color-foreground), .08);
 }
@@ -32,7 +31,6 @@ variant-list .quantity__button {
 @media screen and (min-width: 750px) {
   .variant-list__total {
     position: sticky;
-    justify-content: space-between;
     bottom: 0;
     z-index: 1;
     background-color: rgb(var(--color-background));
@@ -461,66 +459,24 @@ variant-list-remove-all-button:hover .icon-remove {
     margin-bottom: 1.2rem;
   }
 
-<<<<<<< HEAD
-  .variantlist-total {
-=======
-.variant-list__total-items h3,
-.totals__subtotal-value {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.variant-list__total-items p,
-.totals__subtotal {
-  margin-top: 0.2rem;
-  opacity: 0.75;
-  margin-bottom: 1.2rem;
-}
-
-.variant-list-total__info {
-  display: flex;
-}
-
-.variant-list-total {
-  padding-top: 2rem;
-  border-top: 0.1rem solid rgba(var(--color-foreground), .08);
-}
-
-.totals__product-total {
-  text-align: center;
-}
-
-@media screen and (min-width: 750px) {
-  .variant-list-total {
-    position: sticky;
-    bottom: 0;
-    z-index: 1;
-    background-color: rgb(var(--color-background));
+  .variant-list__total-items h3,
+  .totals__subtotal-value {
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
-  .variant-list__total-items {
-    padding-left: calc(5rem / var(--font-body-scale) + var(--inputs-border-width) * 2);
+  .variant-list__total-items p,
+  .totals__subtotal {
+    margin-top: 0.2rem;
+    opacity: 0.75;
+    margin-bottom: 1.2rem;
   }
 
-  .totals__product-total {
-    text-align: right;
-  }
-
-  .variant-list__total-items {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .totals {
-    flex-grow: 1;
-    text-align: right;
-  }
-}
-
-@media screen and (max-width: 750px) {
-  .totals__product-total {
->>>>>>> 903652de (Fix confirmation msg)
+  .variant-list-total__info {
     display: flex;
+  }
+
+  .variant-list-total {
     padding-top: 2rem;
     border-top: 0.1rem solid rgba(var(--color-foreground), .08);
   }
@@ -530,13 +486,6 @@ variant-list-remove-all-button:hover .icon-remove {
   }
 
   @media screen and (min-width: 750px) {
-    .variantlist-total {
-      position: sticky;
-      bottom: 0;
-      z-index: 1;
-      background-color: rgb(var(--color-background));
-    }
-
     .variant-list__total-items {
       padding-left: calc(5rem / var(--font-body-scale) + var(--inputs-border-width) * 2);
     }
@@ -559,21 +508,59 @@ variant-list-remove-all-button:hover .icon-remove {
   @media screen and (max-width: 750px) {
     .totals__product-total {
       display: flex;
-      justify-content: center;
+      padding-top: 2rem;
+      border-top: 0.1rem solid rgba(var(--color-foreground), .08);
     }
 
-    .totals__subtotal-value,
-    .variant-list__total-items h3 {
-      margin-right: 1.2rem;
+    .totals__product-total {
+      text-align: center;
     }
 
-    .variant-list__total-items {
-      margin-top: 1rem;
-      margin-bottom: 1.3rem;
-    }
-  }
+    @media screen and (min-width: 750px) {
+      .variantlist-total {
+        position: sticky;
+        bottom: 0;
+        z-index: 1;
+        background-color: rgb(var(--color-background));
+      }
 
-  variant-list .tax-note {
-    margin-bottom: 3.6rem;
-    display: block;
-  }
+      .variant-list__total-items {
+        padding-left: calc(5rem / var(--font-body-scale) + var(--inputs-border-width) * 2);
+      }
+
+      .totals__product-total {
+        text-align: right;
+      }
+
+      .variant-list__total-items {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .totals {
+        flex-grow: 1;
+        text-align: right;
+      }
+    }
+
+    @media screen and (max-width: 750px) {
+      .totals__product-total {
+        display: flex;
+        justify-content: center;
+      }
+
+      .totals__subtotal-value,
+      .variant-list__total-items h3 {
+        margin-right: 1.2rem;
+      }
+
+      .variant-list__total-items {
+        margin-top: 1rem;
+        margin-bottom: 1.3rem;
+      }
+    }
+
+    variant-list .tax-note {
+      margin-bottom: 3.6rem;
+      display: block;
+    }
